--- a/eslint/includes/typescript.yaml
+++ b/eslint/includes/typescript.yaml
@@ -4,5 +4,6 @@ extends:
 
 rules:
     '@typescript-eslint/explicit-module-boundary-types': off
+    '@typescript-eslint/no-empty-interface': off
     '@typescript-eslint/no-explicit-any': off
     '@typescript-eslint/no-non-null-assertion': off
