--- a/eslint/includes/typescript.yaml
+++ b/eslint/includes/typescript.yaml
@@ -7,3 +7,8 @@ rules:
     '@typescript-eslint/no-empty-interface': off
     '@typescript-eslint/no-explicit-any': off
     '@typescript-eslint/no-non-null-assertion': off
+
+    '@typescript-eslint/no-inferrable-types':
+        -   warn
+        -   ignoreParameters: true
+            ignoreProperties: true
