--- a/eslint/includes/base.yaml
+++ b/eslint/includes/base.yaml
@@ -22,6 +22,7 @@ rules:
     indent:
         - error
         - tab
+        - SwitchCase: 1
     linebreak-style:
         - error
         - unix
