--- a/eslint/includes/typescript.yaml
+++ b/eslint/includes/typescript.yaml
@@ -12,3 +12,7 @@ rules:
         -   warn
         -   ignoreParameters: true
             ignoreProperties: true
+
+    '@typescript-eslint/ban-ts-comment':
+        - error
+        - ts-ignore: allow-with-description
