--- a/eslint/includes/typescript.yaml
+++ b/eslint/includes/typescript.yaml
@@ -9,10 +9,14 @@ rules:
     '@typescript-eslint/no-non-null-assertion': off
 
     '@typescript-eslint/no-inferrable-types':
-        -   warn
+        - warn
         -   ignoreParameters: true
             ignoreProperties: true
 
     '@typescript-eslint/ban-ts-comment':
         - error
-        - ts-ignore: allow-with-description
+        -   ts-ignore: allow-with-description
+
+    '@typescript-eslint/no-unused-vars':
+        - warn
+        -   argsIgnorePattern: 'props'
